--- a/frontend/my-react-app/package.json
+++ b/frontend/my-react-app/package.json
@@ -11,8 +11,11 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
+    "lodash": "^4.17.21",
+    "lodash.debounce": "^4.0.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.27.0"
   },
   "devDependencies": {
