--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,6 @@
 DB_HOST=localhost
-DB_USER=mohamad
-DB_PASSWORD=78974649moeFR!
+DB_USER=webproject
+DB_PASSWORD=webproject
 DB_NAME=collaborative_text_editor
 DB_PORT=5432
 JWT_SECRET=8Pjn&2v@8Zb6^EwrxHkD3s!T$eR^bH
